adding scheduled task to delete last year records every day